tests/macro-tests/cases/widget_new/unknown_member_in_when_expr1.stderr
error[E0599]: no method named `__w_1__` found for struct `zng_wgt_input::state::is_pressed_inputs__` in the current scope
 --> cases/widget_new/unknown_member_in_when_expr1.rs:7:16
  |
7 |         when *#is_pressed.1 {
  |                ^^^^^^^^^^
  |
help: there is a method `__w_0__` with a similar name
  |
7 -         when *#is_pressed.1 {
7 +         when *#__w_0__.1 {
  |
